fix(baseformcontrol): shift font size for new token
affects: @entur/form

--- a/packages/form/src/BaseFormControl.scss
+++ b/packages/form/src/BaseFormControl.scss
@@ -114,7 +114,7 @@
     .eds-form-control,
     .eds-form-control__append,
     .eds-form-control__prepend {
-      font-size: $font-sizes-extra-large;
+      font-size: $font-sizes-extra-large2;
       line-height: $line-heights-extra-large4;
     }
   }
